--- a/po/no/kiconedit.po
+++ b/po/no/kiconedit.po
@@ -201,6 +201,14 @@ msgid ""
 "tanghus@kde.org\n"
 "http://w1.1358.telia.com/~u135800018"
 msgstr ""
+"KDE Ikonredigerer\n"
+"\n"
+"Et grafisk tegneprogram for laging\n"
+"av ikoner med KDEs ikonpalett.\n"
+"\n"
+"Copyright 1998 ved Thomas Tanghus\n"
+"tanghus@kde.org\n"
+"http://w1.1358.telia.com/~u135800018"
 
 #: kiconedit.cpp:570
 msgid "What is ...?"
@@ -713,11 +721,11 @@ msgstr ""
 
 #: kicongrid.cpp:66
 msgid "width"
-msgstr ""
+msgstr "bredde"
 
 #: kicongrid.cpp:71
 msgid "height"
-msgstr ""
+msgstr "høyde"
 
 #: kicongrid.cpp:684
 msgid "There was an error loading a blank image.\n"
