*** empty log message ***

--- a/po/pt_BR/kpaint.po
+++ b/po/pt_BR/kpaint.po
@@ -222,6 +222,14 @@ msgid ""
 "see the online documentation\n"
 "for details."
 msgstr ""
+"KPaint version %s\n"
+"\n"
+"(c) %s\n"
+"\n"
+"KPaint é liberado sob a\n"
+"Licença Pública GNU;\n"
+"veja a documentação on-line\n"
+"para maiores detalhes."
 
 #: kpaint.cpp:508
 msgid "&Image"
