CVS_SILENT An update.

--- a/po/no/kpaint.po
+++ b/po/no/kpaint.po
@@ -231,6 +231,14 @@ msgid ""
 "see the online documentation\n"
 "for details."
 msgstr ""
+"KPaint versjon %s\n"
+"\n"
+"(c) %s\n"
+"\n"
+"KPaint er gitt ut under\n"
+"GNU Public License-avtalen,\n"
+"se dokumentasjonen for\n"
+"detaljer."
 
 #: kpaint.cpp:508
 msgid "&Image"
