--- a/po/fi/kiconedit.po
+++ b/po/fi/kiconedit.po
@@ -202,6 +202,14 @@ msgid ""
 "tanghus@kde.org\n"
 "http://w1.1358.telia.com/~u135800018"
 msgstr ""
+"KDE Kuvakemuokkain\n"
+"\n"
+"Grafiikkaohjelma KDE:n ikonien\n"
+"luomiseen käyttäen KDE:n palettia\n"
+"\n"
+"Copyright 1998 Thomas Tanghus\n"
+"tanghus@kde.org\n"
+"http://w1.1358.telia.com/~u135800018"
 
 #: kiconedit.cpp:570
 msgid "What is ...?"
@@ -713,11 +721,11 @@ msgstr ""
 
 #: kicongrid.cpp:66
 msgid "width"
-msgstr ""
+msgstr "leveys"
 
 #: kicongrid.cpp:71
 msgid "height"
-msgstr ""
+msgstr "korkeus"
 
 #: kicongrid.cpp:684
 msgid "There was an error loading a blank image.\n"
