--- a/po/fr/kpaint.po
+++ b/po/fr/kpaint.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: kpaint\n"
 "POT-Creation-Date: 1999-01-11 01:50+0100\n"
-"PO-Revision-Date: 1998-01-28 22:55 CET\n"
-"Last-Translator: Serge \"sergio\" Tellène <tells@mygale.org>\n"
+"PO-Revision-Date: 1999-01-16 15:45 CET\n"
+"Last-Translator: Francois-Xavier DURANCEAU <Francois-Xavier.Duranceau@loria.fr>\n"
 "Language-Team: Français\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; \n"
@@ -232,6 +232,14 @@ msgid ""
 "see the online documentation\n"
 "for details."
 msgstr ""
+"KPaint version %s\n"
+"\n"
+"(c) %s\n"
+"\n"
+"KPaint est distribué sous l'agrément\n"
+"de la GNU Public License,\n"
+"voir la documentation en ligne\n"
+"pour plus de détails."
 
 #: kpaint.cpp:508
 msgid "&Image"
