--- a/po/fr/kfax.po
+++ b/po/fr/kfax.po
@@ -2,65 +2,64 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: kfax\n"
 "POT-Creation-Date: 1999-01-06 01:47+0100\n"
-"PO-Revision-Date: 1998-12-12 20:00+0200\n"
-"Last-Translator: Montel Laurent <montell@club-internet.fr>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 1999-01-16 15:30+0200\n"
+"Last-Translator: Francois-Xavier DURANCEAU <Francois-Xavier.Duranceau@loria.fr>\n"
+"Language-Team: Français <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: ENCODING\n"
 
 #: kfax.cpp:233 kfax.cpp:828
 msgid "Show &Tool Bar"
-msgstr "Montrer la barre d'outils"
+msgstr "Afficher la barre d'ou&tils"
 
 #: kfax.cpp:235 kfax.cpp:821
 msgid "Hide &Tool Bar"
-msgstr "Cacher la barre d'outils"
+msgstr "Cacher la barre d'ou&tils"
 
 #: kfax.cpp:238 kfax.cpp:801
 msgid "Show &Status Bar"
-msgstr "Montrer la barre d'état"
+msgstr "Afficher la barre d'ét&at"
 
 #: kfax.cpp:240 kfax.cpp:794
 msgid "Hide &Status Bar"
-msgstr "Cacher la barre d'état"
+msgstr "Cacher la barre d'ét&at"
 
 #: kfax.cpp:403
 msgid "Help page"
-msgstr ""
+msgstr "Page d'aide"
 
 #: kfax.cpp:405
 msgid "&Open Fax..."
-msgstr ""
+msgstr "&Ouvrir un fax..."
 
 #: kfax.cpp:406
 msgid "&Add Fax..."
-msgstr ""
+msgstr "&Ajouter un fax..."
 
 #: kfax.cpp:409
 msgid "Open &URL..."
-msgstr ""
+msgstr "Ouvrir l'&URL"
 
 #: kfax.cpp:410
 msgid "Save to U&RL..."
-msgstr ""
+msgstr "Enregistrer dans l'U&RL"
 
 #: kfax.cpp:411
 msgid "&Close Fax"
-msgstr ""
+msgstr "&Fermer"
 
 #: kfax.cpp:418
 msgid "&Next Page"
-msgstr "&Prochaine page"
+msgstr "Page &suivante"
 
 #: kfax.cpp:419
 msgid "&Prev Page"
-msgstr "&Précedente page"
+msgstr "Page &précédente"
 
 #: kfax.cpp:420
 msgid "&First Page"
@@ -84,31 +83,31 @@ msgstr ""
 
 #: kfax.cpp:427
 msgid "Zoom &in"
-msgstr "Zoom avant"
+msgstr "Zoom a&vant"
 
 #: kfax.cpp:428
 msgid "Zoom &out"
-msgstr "Zoom arrière"
+msgstr "Zoom a&rrière"
 
 #: kfax.cpp:433
 msgid "&Fax Options..."
-msgstr ""
+msgstr "&Options de fax..."
 
 #: kfax.cpp:435
 msgid "&Tool Bar"
-msgstr "&Barre d'outils"
+msgstr "Barre d'ou&tils"
 
 #: kfax.cpp:436
 msgid "&Status Bar"
-msgstr "&Barre d'état"
+msgstr "Barre d'ét&at"
 
 #: kfax.cpp:463
 msgid "Go back"
-msgstr ""
+msgstr "Reculer"
 
 #: kfax.cpp:466
 msgid "Go forward"
-msgstr ""
+msgstr "Avancer"
 
 #: kfax.cpp:471
 msgid "Go to start"
@@ -136,15 +135,15 @@ msgstr "Aller à la page ..."
 
 #: kfax.cpp:583
 msgid "Open Location:"
-msgstr ""
+msgstr "Ouvrir :"
 
 #: kfax.cpp:599
 msgid "You need to open a Fax first"
-msgstr ""
+msgstr "Vous devez d'abord ouvrir un Fax"
 
 #: kfax.cpp:605
 msgid "Save to Location:"
-msgstr ""
+msgstr "Enregistrer dans :"
 
 #: kfax.cpp:812
 msgid "Not yet implemented"
@@ -160,13 +159,13 @@ msgid ""
 "Invalid page dimensions:\n"
 "Width %.2f Height %.2f\n"
 msgstr ""
-"Dimension de page invalide:\n"
+"Dimension de page invalide :\n"
 "Largeur %.2f Hauteur %.2f\n"
 
 #: kfax.cpp:1012
 #, c-format
 msgid "Can't print to \"%s\"\n"
-msgstr "Impossible d'imprimer vers\"%s\"\n"
+msgstr "Impossible d'imprimer vers \"%s\"\n"
 
 #: kfax.cpp:1023
 #, c-format
@@ -186,10 +185,12 @@ msgid ""
 "Failure in 'copy file()'\n"
 "Couldn't save file!"
 msgstr ""
+"Erreur dans 'copy file()'\n"
+"Impossible d'enregistrer le fichier !"
 
 #: kfax.cpp:1133
 msgid "Saved"
-msgstr ""
+msgstr "Enregistré"
 
 #: kfax.cpp:1140 kfax.cpp:1202
 msgid ""
@@ -205,31 +206,31 @@ msgstr "Impossible de communiquer avec KFM"
 #: kfax.cpp:1192
 #, c-format
 msgid "Loading '%s'"
-msgstr ""
+msgstr "Chargement de '%s'"
 
 #: kfax.cpp:1195
 msgid "Done"
-msgstr ""
+msgstr "Fait"
 
 #: kfax.cpp:1209
 msgid "Calling KFM"
-msgstr ""
+msgstr "Appel de KFM"
 
 #: kfax.cpp:1222
 msgid "Starting Job"
-msgstr ""
+msgstr "Démarrage de la tâche"
 
 #: kfax.cpp:1225
 msgid "Connected"
-msgstr ""
+msgstr "Connecté"
 
 #: kfax.cpp:1227
 msgid "Waiting..."
-msgstr ""
+msgstr "Attente..."
 
 #: kfax.cpp:2078
 msgid "You need to open a fax page first."
-msgstr ""
+msgstr "Vous devez d'abord ouvrir une page de fax."
 
 #: kfax.cpp:2739
 msgid ""
@@ -238,7 +239,7 @@ msgid ""
 "\n"
 msgstr ""
 "Un fichier avec le même nom existe déjà\n"
-"Voulez-vous l'écraser?\n"
+"Voulez-vous l'écraser ?\n"
 
 #: faxinput.cpp:111
 #, c-format
@@ -246,7 +247,7 @@ msgid ""
 "Unable to open:\n"
 "%s\n"
 msgstr ""
-"Impossibilité d'ouvrir:\n"
+"Impossible d'ouvrir :\n"
 "%s\n"
 
 #: print.cpp:51
@@ -259,11 +260,11 @@ msgstr "Imprimer en Postscript"
 
 #: print.cpp:62
 msgid "Print Command:"
-msgstr ""
+msgstr "Commande d'impression :"
 
 #: print.cpp:71
 msgid "Print as Postscript to File:"
-msgstr "Imprimer en Postscript dans le fichier:"
+msgstr "Imprimer en Postscript dans le fichier :"
 
 #: print.cpp:77
 msgid "Browse"
@@ -271,23 +272,23 @@ msgstr "Parcourir"
 
 #: print.cpp:86
 msgid "Page Size:"
-msgstr "Taille de la page:"
+msgstr "Taille de la page :"
 
 #: print.cpp:105
 msgid "Scale fax to page size"
-msgstr ""
+msgstr "Adapter le fax à la taille de la page"
 
 #: print.cpp:111
 msgid "Add Printer Margins (measured in cm):"
-msgstr ""
+msgstr "Ajouter les marges d'impression (en cm) :"
 
 #: print.cpp:119
 msgid "Horizontal:"
-msgstr "Horizontal:"
+msgstr "Horizontal :"
 
 #: print.cpp:128
 msgid "Vertical:"
-msgstr "Vertical:"
+msgstr "Vertical :"
 
 #: print.cpp:258
 msgid "Select Filename"
@@ -303,6 +304,8 @@ msgid ""
 "You must enter a print command such as \"lpr\"\n"
 " if you wish to print to a printer."
 msgstr ""
+"Vous devez entrer une commande d'impression telle que \"lpr\"\n"
+" si vous voulez imprimer vers une imprimante."
 
 #: options.cpp:54
 msgid "KFax Options Dialog"
@@ -322,15 +325,15 @@ msgstr ""
 
 #: options.cpp:74
 msgid "Normal"
-msgstr ""
+msgstr "Normal"
 
 #: options.cpp:81
 msgid "Display Options:"
-msgstr ""
+msgstr "Options d'affichage :"
 
 #: options.cpp:85
 msgid "Landscape"
-msgstr ""
+msgstr "Paysage"
 
 #: options.cpp:89
 msgid "Upside Down"
@@ -338,7 +341,7 @@ msgstr ""
 
 #: options.cpp:93
 msgid "Invert"
-msgstr ""
+msgstr "Inverser"
 
 #: options.cpp:102
 msgid "Raw Fax Data are:"
@@ -354,8 +357,8 @@ msgstr ""
 
 #: options.cpp:135
 msgid "Raw Fax width:"
-msgstr ""
+msgstr "Raw Fax largeur :"
 
 #: options.cpp:142
 msgid "height:"
-msgstr ""
+msgstr "hauteur :"
