--- a/po/fr/kfax.po
+++ b/po/fr/kfax.po
@@ -7,7 +7,8 @@ msgstr ""
 "Project-Id-Version: kfax\n"
 "POT-Creation-Date: 1999-01-06 01:47+0100\n"
 "PO-Revision-Date: 1999-01-16 15:30+0200\n"
-"Last-Translator: Francois-Xavier DURANCEAU <Francois-Xavier.Duranceau@loria.fr>\n"
+"Last-Translator: Francois-Xavier DURANCEAU "
+"<Francois-Xavier.Duranceau@loria.fr>\n"
 "Language-Team: Français <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
