--- a/po/fr/kpaint.po
+++ b/po/fr/kpaint.po
@@ -7,7 +7,8 @@ msgstr ""
 "Project-Id-Version: kpaint\n"
 "POT-Creation-Date: 1999-01-11 01:50+0100\n"
 "PO-Revision-Date: 1999-01-16 15:45 CET\n"
-"Last-Translator: Francois-Xavier DURANCEAU <Francois-Xavier.Duranceau@loria.fr>\n"
+"Last-Translator: Francois-Xavier DURANCEAU "
+"<Francois-Xavier.Duranceau@loria.fr>\n"
 "Language-Team: Français\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; \n"
