--- a/po/fr/kghostview.po
+++ b/po/fr/kghostview.po
@@ -38,8 +38,8 @@ msgid "Remove page marks"
 msgstr "Retirer les signets"
 
 #: marklist.cpp:367
-msgid "&Page"
-msgstr "&Page"
+msgid "Page"
+msgstr "Page"
 
 #: copyright.cpp:27
 msgid "Copyright"
@@ -503,7 +503,8 @@ msgstr ""
 "Ecrit par Mark Donohoe <donohoe@kde.org>, basé sur le travail original\n"
 "de Tim Theisen.\n"
 "\n"
-"Incorpore du code du gv de Johanes Plass. Ceci ajoute le support des fichiers\n"
+"Incorpore du code du gv de Johanes Plass. Ceci ajoute le support des "
+"fichiers\n"
 "compressés et PDF.\n"
 "\n"
 "Voir http://wwwthep.physik.uni-mainz.de/~plass/gv/n"
@@ -643,8 +644,8 @@ msgid ""
 "Set Environment variable (to PRINTER or LPDEST for instance)for Printer name "
 "to be taken into account."
 msgstr ""
-"Définissez la variable Environment (à PRINTER ou LPDEST, par exemple ) pour prendre "
-"en compte le nom de l'imprimante."
+"Définissez la variable Environment (à PRINTER ou LPDEST, par exemple ) pour "
+"prendre en compte le nom de l'imprimante."
 
 #: kghostview.cpp:1661
 #, c-format
