--- a/po/de/kpaint.po
+++ b/po/de/kpaint.po
@@ -2,13 +2,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: kpaint\n"
 "POT-Creation-Date: 1999-01-11 01:50+0100\n"
-"PO-Revision-Date: 1998-11-14 14:04 +0100\n"
+"PO-Revision-Date: 1999-01-23 19:50+MET\n"
+"Translator: Oliver Hensel <oliver.hensel@gmx.de>\n"
 "Last-Translator: Thomas Diehl <th_diehl@csi.com>\n"
 "Language-Team: German <kde-i18n@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
-"Content-Transfer-Encoding: iso-8859-1\n"
-"Translator: Oliver Hensel <oliver.hensel@gmx.de>\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: areaselect.cpp:20
 msgid "Area Selection"
@@ -229,6 +229,14 @@ msgid ""
 "see the online documentation\n"
 "for details."
 msgstr ""
+"KPaint version %s\n"
+"\n"
+"(c) %s\n"
+"\n"
+"KPaint ist veröffentlicht unter der\n"
+"GNU Public License.\n"
+"Siehe die Online-Dokumentation\n"
+"wegen der Einzelheiten."
 
 #: kpaint.cpp:508
 msgid "&Image"
