islandic translations by Logi Ragnarsson <logir@hi.is>

--- a/po/is/kiconedit.po
+++ b/po/is/kiconedit.po
@@ -196,6 +196,14 @@ msgid ""
 "tanghus@kde.org\n"
 "http://w1.1358.telia.com/~u135800018"
 msgstr ""
+"KDE Táknmyndaforrit"
+"\n"
+"Teikniforrit til að búa til táknmyndir\n"
+"í KDE táknmyndalitunum\n"
+"\n"
+"Höfundarréttur 1998, Thomas Tanghus\n"
+"tanghus@kde.org\n"
+"http://w1.1358.telia.com/~u135800018"
 
 #: kiconedit.cpp:570
 msgid "What is ...?"
