--- a/po/is/kiconedit.po
+++ b/po/is/kiconedit.po
@@ -196,8 +196,7 @@ msgid ""
 "tanghus@kde.org\n"
 "http://w1.1358.telia.com/~u135800018"
 msgstr ""
-"KDE Táknmyndaforrit"
-"\n"
+"KDE Táknmyndaforrit\n"
 "Teikniforrit til að búa til táknmyndir\n"
 "í KDE táknmyndalitunum\n"
 "\n"
